--- a/package.json
+++ b/package.json
@@ -1,52 +1,53 @@
 {
-	"name": "hotel-scape-sveltekit",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-		"lint": "eslint .",
-		"test:e2e": "playwright test",
-		"test": "npm run test:e2e"
-	},
-	"devDependencies": {
-		"@eslint/compat": "^1.2.5",
-		"@eslint/js": "^9.18.0",
-		"@playwright/test": "^1.49.1",
-		"@sveltejs/adapter-node": "^5.2.11",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15",
-		"@tailwindcss/vite": "^4.0.14",
-		"autoprefixer": "^10.4.21",
-		"daisyui": "^5.0.6",
-		"eslint": "^9.18.0",
-		"eslint-plugin-svelte": "^3.0.0",
-		"globals": "^16.0.0",
-		"postcss": "^8.5.3",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"svelte-preprocess": "^6.0.3",
-		"tailwindcss": "^4.0.14",
-		"typescript": "^5.0.0",
-		"vite": "^6.0.0"
-	},
-	"dependencies": {
-		"@tabler/icons-svelte": "^3.31.0",
-		"@tailwindcss/postcss": "^4.0.14",
-		"axios": "^1.8.3",
-		"bootstrap-icons": "^1.11.3",
-		"html5-qrcode": "^2.3.8",
-		"moment": "^2.30.1",
-		"qrcode": "^1.5.4",
-		"underscore": "^1.13.7",
-		"uuid4": "^2.0.3",
-		"zod": "^3.24.2"
-	}
+  "name": "hotel-scape-sveltekit",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev --host",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prepare": "svelte-kit sync || echo ''",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+    "lint": "eslint .",
+    "test:e2e": "playwright test",
+    "test": "npm run test:e2e"
+  },
+  "devDependencies": {
+    "@eslint/compat": "^1.2.5",
+    "@eslint/js": "^9.18.0",
+    "@playwright/test": "^1.49.1",
+    "@sveltejs/adapter-node": "^5.2.11",
+    "@sveltejs/adapter-vercel": "^5.7.2",
+    "@sveltejs/kit": "^2.16.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/vite": "^4.0.14",
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^5.0.6",
+    "eslint": "^9.18.0",
+    "eslint-plugin-svelte": "^3.0.0",
+    "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "svelte": "^5.0.0",
+    "svelte-check": "^4.0.0",
+    "svelte-preprocess": "^6.0.3",
+    "tailwindcss": "^4.0.14",
+    "typescript": "^5.0.0",
+    "vite": "^6.0.0"
+  },
+  "dependencies": {
+    "@tabler/icons-svelte": "^3.31.0",
+    "@tailwindcss/postcss": "^4.0.14",
+    "axios": "^1.8.3",
+    "bootstrap-icons": "^1.11.3",
+    "html5-qrcode": "^2.3.8",
+    "moment": "^2.30.1",
+    "qrcode": "^1.5.4",
+    "underscore": "^1.13.7",
+    "uuid4": "^2.0.3",
+    "zod": "^3.24.2"
+  }
 }
