--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@eslint/js": "^9.18.0",
     "@playwright/test": "^1.49.1",
     "@rollup/plugin-replace": "^6.0.2",
+    "@sveltejs/adapter-auto": "^6.0.1",
     "@sveltejs/adapter-node": "^5.2.11",
     "@sveltejs/adapter-vercel": "^5.7.2",
     "@sveltejs/kit": "^2.16.0",
